--- a/src/components/table/z-tr/styles.css
+++ b/src/components/table/z-tr/styles.css
@@ -59,6 +59,8 @@
 :host(:hover) ::slotted(z-td),
 :host(:hover) ::slotted(z-th) {
   background-color: var(--color-surface02);
+  border-bottom: 1px solid var(--color-surface04);
+  border-top: 1px solid var(--color-surface04);
 }
 
 :host(:focus) {
