--- a/src/components/z-toolbar/styles.css
+++ b/src/components/z-toolbar/styles.css
@@ -1,24 +1,20 @@
 :host {
-  display: inline-block;
-}
-
-.z-toolbar {
   display: inline-flex;
   height: 44px;
   align-items: center;
   padding: 0;
   border: var(--border-size-small) solid var(--color-surface03);
   background-color: var(--color-surface01);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   box-shadow: var(--shadow-4);
-  gap: 4px;
+  gap: calc(var(--space-unit) / 2);
 }
 
-::slotted(.group) {
+::slotted(.z-toolbar-group) {
   display: inline-flex;
 }
 
-::slotted(.group:not(:last-child)) {
+::slotted(.z-toolbar-group:not(:last-child)) {
   padding-right: 5px;
   background-image: linear-gradient(var(--color-surface03));
   background-position: right center;
