--- a/src/components/z-tag/styles.css
+++ b/src/components/z-tag/styles.css
@@ -17,7 +17,7 @@
   font-size: var(--font-size-1);
   font-weight: var(--font-sb);
   letter-spacing: 0.32px;
-  line-height: 14px;
+  line-height: 1.5;
   text-transform: uppercase;
 }
 
