--- a/src/components/z-input/styles-text.css
+++ b/src/components/z-input/styles-text.css
@@ -62,6 +62,11 @@
   cursor: pointer;
 }
 
+.text-wrapper .icons-wrapper > button.toggle-password-icon {
+  --z-icon-width: 24px;
+  --z-icon-height: 24px;
+}
+
 .text-wrapper .icons-wrapper > .input-icon {
   --z-icon-width: 18px;
   --z-icon-height: 18px;
