--- a/src/components/z-popover/index.stories.css
+++ b/src/components/z-popover/index.stories.css
@@ -33,6 +33,7 @@
     overflow: auto;
     width: 100%;
     height: 400px;
+    border: 2px solid black;
     background-color: aqua;
 
     .popover-internal-container-2 {
