--- a/src/components/z-input-message/styles.css
+++ b/src/components/z-input-message/styles.css
@@ -32,7 +32,7 @@
   outline: none;
 }
 
-:host > z-icon {
+:host z-icon {
   --z-icon-width: calc(var(--space-unit) * 2);
   --z-icon-height: calc(var(--space-unit) * 2);
   --z-icon-right-margin: var(--space-unit);
@@ -40,8 +40,8 @@
   margin-top: calc(var(--space-unit) * 0.25);
 }
 
-:host(.small) > z-icon,
-:host(.x-small) > z-icon {
+:host(.small) z-icon,
+:host(.x-small) z-icon {
   --z-icon-width: 14px;
   --z-icon-height: 14px;
   --z-icon-right-margin: calc(var(--space-unit) * 0.5);
