--- a/src/components/z-toolbar/styles.css
+++ b/src/components/z-toolbar/styles.css
@@ -1,6 +1,10 @@
+:host,
+* {
+  box-sizing: border-box;
+}
+
 :host {
   display: inline-flex;
-  height: 44px;
   align-items: center;
   padding: 0;
   border: var(--border-size-small) solid var(--color-surface03);
@@ -10,15 +14,44 @@
   gap: calc(var(--space-unit) / 2);
 }
 
-::slotted(.z-toolbar-group) {
-  display: inline-flex;
-  gap: calc(var(--space-unit) / 2);
+::slotted(z-divider) {
+  height: calc(var(--space-unit) * 4.5) !important;
 }
 
-::slotted(.z-toolbar-group:not(:last-child)) {
-  padding-right: 5px;
-  background-image: linear-gradient(var(--color-surface03));
-  background-position: right center;
-  background-repeat: no-repeat;
-  background-size: var(--border-size-small) calc(100% - 8px);
+@media (max-width: 1151px) {
+  :host {
+    --z-toolbar-columns: ;
+
+    position: relative;
+    display: inline-grid;
+    align-items: stretch;
+    /* background-color: var(--color-surface03); */
+    /* box-shadow: var(--shadow-4), inset 4px 0px 0 0 var(--color-surface01), inset -4px -44px 0 0 var(--color-surface01); */
+    column-gap: 0;
+    grid-template-columns: repeat(var(--z-toolbar-columns, 27), auto); /* 27 is the max number of tools that can fit in a single row at the biggest breakpoint (1151px) with the current tool size and spacing. */
+    row-gap: var(--border-size-small);
+
+
+    /* Overrides z-tool submenu positioning */
+    --z-tool-host-position: static;
+    --z-tool-submenu-top: auto;
+    --z-tool-submenu-bottom: calc(100% + 4px);
+    --z-tool-submenu-left: 0;
+    --z-tool-submenu-transform: none;
+  }
+
+  ::slotted(z-divider) {
+    display: none !important;
+  }
+
+  ::slotted(*:not(z-divider)) {
+    padding-right: calc(var(--space-unit) / 4);
+    padding-left: calc(var(--space-unit) / 4);
+    background-color: var(--color-surface01);
+  }
+
+  ::slotted(z-tool) {
+    border-radius: var(--border-radius);
+  }
+
 }
