--- a/src/components/z-input/styles-text.css
+++ b/src/components/z-input/styles-text.css
@@ -41,12 +41,16 @@
 
 .text-wrapper .icons-wrapper > button.input-icon {
   display: flex;
+  min-width: 24px;
+  min-height: 24px;
   padding: 0;
   border: 0;
   background: none;
   color: inherit;
   font: inherit;
   pointer-events: initial;
+  align-items: center;
+  justify-content: center;
 }
 
 .text-wrapper .icons-wrapper > .input-icon + .input-icon {
