--- a/src/components/z-input/styles-checkbox-radio.css
+++ b/src/components/z-input/styles-checkbox-radio.css
@@ -105,7 +105,7 @@
 
 /* checked state - add visual indicator beyond color */
 .radio-wrapper > input:checked + .radio-label > z-icon {
-  outline: 2px solid currentColor;
+  outline: 2px solid currentcolor;
   outline-offset: 2px;
 }
 
