feat: color-picker/tool integration; improve parent/descendant retrieval functions

--- a/src/components/z-popover/styles.css
+++ b/src/components/z-popover/styles.css
@@ -6,8 +6,8 @@
 
   position: fixed;
   display: none;
-  max-width: calc(100% - var(--grid-margin) * 2);
-  max-height: calc(100% - var(--grid-margin) * 2);
+  max-width: calc(100dvw - var(--grid-margin) * 2);
+  max-height: calc(100dvh - var(--grid-margin) * 2);
   padding: var(--z-popover-padding, 0);
   background: var(--z-popover-theme--surface, var(--color-surface01));
   border-radius: var(--border-radius-small);
@@ -32,8 +32,23 @@
   transform: translateY(-50%);
 }
 
-/* Arrow style */
+:host([current-position^="top"]) {
+  margin: 0 0 var(--space-unit);
+}
 
+:host([current-position^="bottom"]) {
+  margin: var(--space-unit) 0 0;
+}
+
+:host([current-position^="left"]) {
+  margin: 0 var(--space-unit) 0 0;
+}
+
+:host([current-position^="right"]) {
+  margin: 0 0 0 var(--space-unit);
+}
+
+/* Arrow style */
 :host([current-position])::before {
   --arrow-size: 6px;
   --arrow-edge-offset: calc(100% - var(--space-unit) - (var(--arrow-size) / 2));
