--- a/src/components/z-tool/styles.css
+++ b/src/components/z-tool/styles.css
@@ -7,6 +7,7 @@
   --z-tool-size: calc(var(--space-unit) * 5.5);
   --z-tool-icon-size: calc(var(--space-unit) * 2.5);
 
+  position: relative;
   display: inline-flex;
   width: var(--z-tool-size);
   height: var(--z-tool-size);
@@ -20,15 +21,17 @@
   cursor: pointer;
 }
 
-:host([active]) .z-tool {
-  box-shadow: inset 0 0 0 2px var(--color-primary01);
-}
-
-:host([open]) .z-tool {
+:host(:is([active], [open])) .z-tool {
   box-shadow: inset 0 0 0 2px var(--color-primary01);
 }
 
 @media (hover: hover) {
+  :host(:hover),
+  :host:has(.z-tool:focus-visible) {
+    /* ensure any open tooltip is shown over sibling elements */
+    z-index: 1;
+  }
+
   :host(:not([disabled])) .z-tool:hover {
     background-color: var(--color-primary03);
   }
@@ -57,35 +60,24 @@ z-icon {
 }
 
 .z-tool-tooltip {
-  --z-popover-padding: calc(var(--space-unit) * 1.5) calc(var(--space-unit) * 2);
-  --z-popover-theme--surface: var(--color-surface05);
-  --z-popover-theme--text: var(--color-text-inverse);
-  --z-popover-shadow-filter: drop-shadow(0 4px 8px var(--shadow-color-base));
+  --z-tooltip-padding: calc(var(--space-unit) * 1.5) calc(var(--space-unit) * 2);
+  --z-tooltip-shadow-filter: drop-shadow(0 4px 8px var(--shadow-color-base));
 
   z-index: 2;
   font-family: var(--font-family-sans);
 }
 
-@media (max-width: 767px) {
+.z-tool-submenu {
+  border-radius: calc(var(--border-radius) + var(--border-size-small));
+}
+
+.z-tool-submenu ::slotted(z-color-picker) {
+  border: var(--border-size-small) solid var(--color-surface03);
+  border-radius: var(--border-radius);
+}
+
+@media (max-width: 767px) and (hover: none) {
   .z-tool-tooltip {
     display: none !important;
   }
-}
-
-:host {
-  position: var(--z-tool-host-position, relative);
-}
-
-.z-tool-submenu {
-  position: var(--z-tool-submenu-position, absolute);
-  z-index: 1;
-  top: var(--z-tool-submenu-top, calc(100% + 4px));
-  bottom: var(--z-tool-submenu-bottom, auto);
-  left: var(--z-tool-submenu-left, 50%);
-  display: none;
-  transform: var(--z-tool-submenu-transform, translateX(-50%));
-}
-
-.z-tool-submenu-open {
-  display: block;
 }
