--- a/src/components/z-tool/index.stories.css
+++ b/src/components/z-tool/index.stories.css
@@ -1,6 +1,6 @@
 .tool-container {
   position: relative;
-  display: inline-flex;
+  display: flex;
   width: 100%;
   height: 200px;
   align-items: center;
