--- a/src/components/z-toolbar/index.stories.css
+++ b/src/components/z-toolbar/index.stories.css
@@ -1,7 +1,7 @@
 .toolbar-container {
   display: flex;
   width: 100%;
-  height: 150px;
+  min-height: 300px;
   align-items: center;
   justify-content: center;
 }
@@ -9,4 +9,12 @@
 .toolbar-nested {
   flex-direction: column;
   gap: 4px;
+}
+
+.toolbar-with-nested-toolbar {
+  display: flex;
+  min-height: 200px;
+  align-items: flex-start;
+  justify-content: center;
+  padding-top: 20px;
 }
